[package]
name = "file-sort"
version = "0.1.0"
authors = ["Ed Broome <info@sifichi.com>"]
description = "Large text file sort"
keywords = ["sort", "text"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
stopwatch = "0.0.7"
uuid = { version = "0.8.1", features = ["serde", "v4"] }

[profile.release]
debug = false