[package]
name = "file-sort"
version = "0.1.0"
authors = ["Ed Broome <info@sifichi.com>"]
description = "Large text file sort"
keywords = ["sort", "text"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["cargo"] }
stopwatch = "0.0.7"
uuid = { version = "1.6.1", features = ["serde", "v4"] }

[profile.release]
debug = false